Table Persona {
  idPersona integer [primary key]
  idTipoPersona integer
  dni varchar(10)
  apellidoPaterno varchar(100)
  apellidoMaterno varchar(100)
  nombre varchar(100)
  idUbigeo varchar(6)
  estado bit
}

Table TipoPersona {
  idTipoPersona integer [primary key]
  descripcion varchar(100)
}

Ref: Persona.idTipoPersona > TipoPersona.idTipoPersona

Table Paciente {
  idPersona integer [primary key]
  numeroDeHistoria varchar(20)
  estado bit
}

Ref: Persona.idPersona - Paciente.idPersona

Table Medico {
  idPersona integer [primary key]
  nroColegiatura integer
  especialidad varchar(100)
  estado bit
}

Ref: Persona.idPersona - Medico.idPersona

Table Empleado {
  idPersona integer [primary key]
  nombreEmpleado varchar(100)
  clave varchar(100)
  estado bit
}

Ref: Empleado.idPersona - Persona.idPersona

Table Empresa {
  idEmpresa integer [primary key]
  nombre varchar(100)
  RUC varchar(60)
  idUbigeo varchar(6)
  estado bit
}

Table PerfilMedico {
  idPerfilMedico integer [primary key]
  idPersona integer
  idEmpresa integer
  descripcion varchar(100)
}

Table Examen {
  idExamen integer [primary key]
  nombre varchar(100)
}

Table PerfilMedicoExamen {
  idPerfilMedicoExamen integer [primary key]
  idPerfilMedico integer
  idExamen integer
}

Ref: PerfilMedicoExamen.idPerfilMedico > PerfilMedico.idPerfilMedico
Ref: PerfilMedicoExamen.idExamen > Examen.idExamen

Table Cita {
  idCita integer [primary key]
  idPersona integer
  idPerfilMedico integer
  fecha datetime
  idEmpladoCrea integer
  idEmpleadoModifica integer
  idEmpleadoElimina integer
  estado bit
}

Ref: Cita.idPerfilMedico > PerfilMedico.idPerfilMedico

Table CitaExamen {
  idCitaExamen integer [primary key]
  idCita integer
  idExamen integer
  idMedico integer
  estado bit
}

Ref: CitaExamen.idCita > Cita.idCita
Ref: CitaExamen.idMedico > Medico.idPersona
Ref: Cita.idPersona > Paciente.idPersona

Table Ubigeo {
  idUbigeo varchar(6) [primary key]
  codProvincia varchar(2)
  codDepartamento varchar(2)
  codDistrito varchar(2)
  provincia varchar(100) 
  departamento varchar(100) 
  distrito varchar(100) 
  estado bit
}

Table CitaExamenResultado {
  idCitaExamenResultado integer [primary key]
  idCita integer
  idExamenComponente integer
  resultado varchar(100)
  estado bit
}

Ref: CitaExamenResultado.idExamenComponente > ExamenComponente.idExamenComponente
Ref: CitaExamenResultado.idCita > Cita.idCita

Table ExamenComponente {
  idExamenComponente integer [primary key]
  idExamen integer
  descripcionComponente varchar(100)
  estado bit
}

Ref: ExamenComponente.idExamen > Examen.idExamen

Ref: PerfilMedico.idPersona > Paciente.idPersona
Ref: PerfilMedico.idEmpresa > Empresa.idEmpresa
Ref: Persona.idUbigeo > Ubigeo.idUbigeo
Ref: Empresa.idUbigeo > Ubigeo.idUbigeo

Table Auditoria {
  idAuditoria integer [primary key]
  idEmpleado integer
  idCita integer
  fecha datetime
  accion varchar(100)
  descripcion varchar(255)
}

Ref: Auditoria.idEmpleado > Empleado.idPersona
Ref: Auditoria.idCita > Cita.idCita
